Implementacion XML a PDF

--- a/ProjectExpenseControl/Views/Areas/Details.cshtml
+++ b/ProjectExpenseControl/Views/Areas/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles del Área</h2>
 
 <div>
-    <h4>Area</h4>
+    <h4>Área</h4>
     <hr />
 
     <dl class="dl-horizontal">
@@ -47,6 +47,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ARE_IDE_AREA }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.ARE_IDE_AREA }) |
+    @Html.ActionLink("Regresar a la Lista", "Index")
 </p>
