--- a/ProjectExpenseControl/Views/Account/Registration.cshtml
+++ b/ProjectExpenseControl/Views/Account/Registration.cshtml
@@ -23,7 +23,7 @@
 else
 {
 
-    <h2>Registration</h2>
+    <h2>Registro de Usuario</h2>
     if (ViewBag.Message != null)
     {
         <div class="alert alert-danger">
@@ -36,7 +36,7 @@ else
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>User</h4>
+            <h4>Usuario</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -134,18 +134,12 @@ else
 
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Crear" class="btn btn-default" />
                 </div>
             </div>
         </div>
     }
     <div>
-        @Html.ActionLink("Back to List", "Index", "User")
+        @Html.ActionLink("Regresar a la Lista", "Index", "User")
     </div>
-}
-
-
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
