--- a/ProjectExpenseControl/Views/Areas/Index.cshtml
+++ b/ProjectExpenseControl/Views/Areas/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Listado de Áreas";
 }
 
-<h2>Index</h2>
+<h2>Áreas</h2>
 
 <p>
     @Html.ActionLink("Crear Área", "Create")
@@ -13,22 +13,22 @@
 @Html.Partial("_LayoutBottonsExportData")
 
 @*<div id='tabs'>
-    <ul>
-        <li style="margin-left: 30px;">
-            Grid 1
-        </li>
-        <li>
-            Grid 2
-        </li>
-    </ul>
-    <div style="overflow: hidden;">
-        <div style="border:none;" id="grid">
+        <ul>
+            <li style="margin-left: 30px;">
+                Grid 1
+            </li>
+            <li>
+                Grid 2
+            </li>
+        </ul>
+        <div style="overflow: hidden;">
+            <div style="border:none;" id="grid">
+            </div>
         </div>
-    </div>
-    <div style="overflow: hidden;">
-        <div style="border:none;" id="grid2"></div>
-    </div>
-</div>*@
+        <div style="overflow: hidden;">
+            <div style="border:none;" id="grid2"></div>
+        </div>
+    </div>*@
 @section scripts
 {
     <script>
@@ -76,23 +76,40 @@
             // create Tree Grid
             $("#grid").jqxGrid(
                 {
-                    width: 940,
+                    width: $("#grid").parent().width(),
+                    height: $("#grid").parent().height(),
+                    autoheight: true,
                     source: dataAdapter,
                     theme: 'darkblue',
+                    ready: function () {
+                        $('#grid').jqxGrid('autoresizecolumns');
+                    },
                     pageSize: 10,
                     sortable: true,
                     filterable: true,
                     pageable: true,
                     columnsresize: true,
-                    autoshowfiltericon: false,
+                    columnsreorder: true,
+                    autoshowfiltericon: true,
                     columns: [
-                        { text: '', cellsrenderer: editar, width: 20, align: 'center' },
-                        { text: '', cellsrenderer: detalle, width: 20, align: 'center' },
-                        { text: '', cellsrenderer: borrar, width: 20, align: 'center' },
-                        { text: 'Clave del Área', dataField: 'ARE_IDE_AREA', width:130 },
+                        { text: '', cellsrenderer: editar },
+                        { text: '', cellsrenderer: detalle },
+                        { text: '', cellsrenderer: borrar },
+                        { text: 'Clave del Área', dataField: 'ARE_IDE_AREA' },
                         { text: 'Denominación del Área', dataField: 'ARE_DES_NAME' }
                     ]
                 });
+
+            $("#grid").on('columnreordered', function (event) {
+                $("#grid").jqxGrid('autoresizecolumns');
+            });
+            $('#grid').on('filter', function () {
+                $('#grid').jqxGrid('autoresizecolumns');
+            });
+            $('#grid').bind('pagechanged', function () {
+                $('#grid').jqxGrid('autoresizecolumns');
+            });
+
             $("#excelExport").jqxButton();
             $("#xmlExport").jqxButton();
             $("#csvExport").jqxButton();
@@ -108,7 +125,7 @@
             $("#csvExport").click(function () {
                 $("#grid").jqxGrid('exportdata', 'csv', 'jqxGrid');
             });
-            
+
             $("#htmlExport").click(function () {
                 $("#grid").jqxGrid('exportdata', 'html', 'jqxGrid');
             });
@@ -123,70 +140,70 @@
 }
 
 @*@section scripts
-{
-    <script>
-        $(document).ready(function () {
-            var initGrid = function () {
-                var source =
-                    {
-                        datatype: "json",
-                        datafields: [
-                            { name: 'ARE_IDE_AREA' },
-                            { name: 'ARE_DES_NAME' }
-                        ],
-                        id: 'ARE_IDE_AREA',
-                        url: '/Areas/GetAreas'
-                    };
-                var dataAdapter = new $.jqx.dataAdapter(source, { async: false, loadError: function (xhr, status, error) { alert('Error loading "' + source.url + '" : ' + error); } });
-                $("#grid").jqxGrid(
-                    {
-                        width: '100%',
-                        height: '100%',
-                        source: dataAdapter,
-                        columns: [
-                            { text: 'Clave del Área', dataField: 'ARE_IDE_AREA', width: 200 },
-                            { text: 'Denominación del Área', dataField: 'ARE_DES_NAME' }
-                        ]
-                    });
-            }
-            var initGrid2 = function () {
-                //var data = '[{ "CompanyName": "Alfreds Futterkiste", "ContactName": "Maria Anders", "ContactTitle": "Sales Representative", "Address": "Obere Str. 57", "City": "Berlin", "Country": "Germany" }, { "CompanyName": "Ana Trujillo Emparedados y helados", "ContactName": "Ana Trujillo", "ContactTitle": "Owner", "Address": "Avda. de la Constitucin 2222", "City": "Mxico D.F.", "Country": "Mexico" }, { "CompanyName": "Antonio Moreno Taquera", "ContactName": "Antonio Moreno", "ContactTitle": "Owner", "Address": "Mataderos 2312", "City": "Mxico D.F.", "Country": "Mexico" }, { "CompanyName": "Around the Horn", "ContactName": "Thomas Hardy", "ContactTitle": "Sales Representative", "Address": "120 Hanover Sq.", "City": "London", "Country": "UK" }, { "CompanyName": "Berglunds snabbkp", "ContactName": "Christina Berglund", "ContactTitle": "Order Administrator", "Address": "Berguvsvgen 8", "City": "Lule", "Country": "Sweden" }, { "CompanyName": "Blauer See Delikatessen", "ContactName": "Hanna Moos", "ContactTitle": "Sales Representative", "Address": "Forsterstr. 57", "City": "Mannheim", "Country": "Germany" }, { "CompanyName": "Blondesddsl pre et fils", "ContactName": "Frdrique Citeaux", "ContactTitle": "Marketing Manager", "Address": "24, place Klber", "City": "Strasbourg", "Country": "France" }, { "CompanyName": "Blido Comidas preparadas", "ContactName": "Martn Sommer", "ContactTitle": "Owner", "Address": "C\/ Araquil, 67", "City": "Madrid", "Country": "Spain" }, { "CompanyName": "Bon app\'", "ContactName": "Laurence Lebihan", "ContactTitle": "Owner", "Address": "12, rue des Bouchers", "City": "Marseille", "Country": "France" }, { "CompanyName": "Bottom-Dollar Markets", "ContactName": "Elizabeth Lincoln", "ContactTitle": "Accounting Manager", "Address": "23 Tsawassen Blvd.", "City": "Tsawassen", "Country": "Canada" }, { "CompanyName": "B\'s Beverages", "ContactName": "Victoria Ashworth", "ContactTitle": "Sales Representative", "Address": "Fauntleroy Circus", "City": "London", "Country": "UK" }, { "CompanyName": "Cactus Comidas para llevar", "ContactName": "Patricio Simpson", "ContactTitle": "Sales Agent", "Address": "Cerrito 333", "City": "Buenos Aires", "Country": "Argentina" }, { "CompanyName": "Centro comercial Moctezuma", "ContactName": "Francisco Chang", "ContactTitle": "Marketing Manager", "Address": "Sierras de Granada 9993", "City": "Mxico D.F.", "Country": "Mexico" }, { "CompanyName": "Chop-suey Chinese", "ContactName": "Yang Wang", "ContactTitle": "Owner", "Address": "Hauptstr. 29", "City": "Bern", "Country": "Switzerland" }, { "CompanyName": "Comrcio Mineiro", "ContactName": "Pedro Afonso", "ContactTitle": "Sales Associate", "Address": "Av. dos Lusadas, 23", "City": "Sao Paulo", "Country": "Brazil" }, { "CompanyName": "Consolidated Holdings", "ContactName": "Elizabeth Brown", "ContactTitle": "Sales Representative", "Address": "Berkeley Gardens 12 Brewery", "City": "London", "Country": "UK" }, { "CompanyName": "Drachenblut Delikatessen", "ContactName": "Sven Ottlieb", "ContactTitle": "Order Administrator", "Address": "Walserweg 21", "City": "Aachen", "Country": "Germany" }, { "CompanyName": "Du monde entier", "ContactName": "Janine Labrune", "ContactTitle": "Owner", "Address": "67, rue des Cinquante Otages", "City": "Nantes", "Country": "France" }, { "CompanyName": "Eastern Connection", "ContactName": "Ann Devon", "ContactTitle": "Sales Agent", "Address": "35 King George", "City": "London", "Country": "UK" }, { "CompanyName": "Ernst Handel", "ContactName": "Roland Mendel", "ContactTitle": "Sales Manager", "Address": "Kirchgasse 6", "City": "Graz", "Country": "Austria"}]';
-                // prepare the data
-                var source =
-                    {
-                        datatype: "json",
-                        datafields: [
-                            { name: 'ARE_IDE_AREA', type: 'string' },
-                            { name: 'ARE_DES_NAME', type: 'string' }
-                        ],
-                        id: 'ARE_IDE_AREA',
-                        url: '/Areas/GetAreas'
-                    };
-                var dataAdapter = new $.jqx.dataAdapter(source);
-                $("#grid2").jqxGrid(
-                    {
-                        width: '100%',
-                        height: '100%',
-                        source: dataAdapter,
-                        columns: [
-                            { text: 'Clave del Área', dataField: 'ARE_IDE_AREA', width: 200 },
-                            { text: 'Denominación del Área', dataField: 'ARE_DES_NAME' }
-                        ]
-                    });
-            }
-            // init widgets.
-            var initWidgets = function (tab) {
-                switch (tab) {
-                    case 0:
-                        initGrid();
-                        break;
-                    case 1:
-                        initGrid2();
-                        break;
+    {
+        <script>
+            $(document).ready(function () {
+                var initGrid = function () {
+                    var source =
+                        {
+                            datatype: "json",
+                            datafields: [
+                                { name: 'ARE_IDE_AREA' },
+                                { name: 'ARE_DES_NAME' }
+                            ],
+                            id: 'ARE_IDE_AREA',
+                            url: '/Areas/GetAreas'
+                        };
+                    var dataAdapter = new $.jqx.dataAdapter(source, { async: false, loadError: function (xhr, status, error) { alert('Error loading "' + source.url + '" : ' + error); } });
+                    $("#grid").jqxGrid(
+                        {
+                            width: '100%',
+                            height: '100%',
+                            source: dataAdapter,
+                            columns: [
+                                { text: 'Clave del Área', dataField: 'ARE_IDE_AREA', width: 200 },
+                                { text: 'Denominación del Área', dataField: 'ARE_DES_NAME' }
+                            ]
+                        });
                 }
-            }
-            $('#tabs').jqxTabs({ width: 500, height: 560, initTabContent: initWidgets });
-        });
-    </script>
-}*@
+                var initGrid2 = function () {
+                    //var data = '[{ "CompanyName": "Alfreds Futterkiste", "ContactName": "Maria Anders", "ContactTitle": "Sales Representative", "Address": "Obere Str. 57", "City": "Berlin", "Country": "Germany" }, { "CompanyName": "Ana Trujillo Emparedados y helados", "ContactName": "Ana Trujillo", "ContactTitle": "Owner", "Address": "Avda. de la Constitucin 2222", "City": "Mxico D.F.", "Country": "Mexico" }, { "CompanyName": "Antonio Moreno Taquera", "ContactName": "Antonio Moreno", "ContactTitle": "Owner", "Address": "Mataderos 2312", "City": "Mxico D.F.", "Country": "Mexico" }, { "CompanyName": "Around the Horn", "ContactName": "Thomas Hardy", "ContactTitle": "Sales Representative", "Address": "120 Hanover Sq.", "City": "London", "Country": "UK" }, { "CompanyName": "Berglunds snabbkp", "ContactName": "Christina Berglund", "ContactTitle": "Order Administrator", "Address": "Berguvsvgen 8", "City": "Lule", "Country": "Sweden" }, { "CompanyName": "Blauer See Delikatessen", "ContactName": "Hanna Moos", "ContactTitle": "Sales Representative", "Address": "Forsterstr. 57", "City": "Mannheim", "Country": "Germany" }, { "CompanyName": "Blondesddsl pre et fils", "ContactName": "Frdrique Citeaux", "ContactTitle": "Marketing Manager", "Address": "24, place Klber", "City": "Strasbourg", "Country": "France" }, { "CompanyName": "Blido Comidas preparadas", "ContactName": "Martn Sommer", "ContactTitle": "Owner", "Address": "C\/ Araquil, 67", "City": "Madrid", "Country": "Spain" }, { "CompanyName": "Bon app\'", "ContactName": "Laurence Lebihan", "ContactTitle": "Owner", "Address": "12, rue des Bouchers", "City": "Marseille", "Country": "France" }, { "CompanyName": "Bottom-Dollar Markets", "ContactName": "Elizabeth Lincoln", "ContactTitle": "Accounting Manager", "Address": "23 Tsawassen Blvd.", "City": "Tsawassen", "Country": "Canada" }, { "CompanyName": "B\'s Beverages", "ContactName": "Victoria Ashworth", "ContactTitle": "Sales Representative", "Address": "Fauntleroy Circus", "City": "London", "Country": "UK" }, { "CompanyName": "Cactus Comidas para llevar", "ContactName": "Patricio Simpson", "ContactTitle": "Sales Agent", "Address": "Cerrito 333", "City": "Buenos Aires", "Country": "Argentina" }, { "CompanyName": "Centro comercial Moctezuma", "ContactName": "Francisco Chang", "ContactTitle": "Marketing Manager", "Address": "Sierras de Granada 9993", "City": "Mxico D.F.", "Country": "Mexico" }, { "CompanyName": "Chop-suey Chinese", "ContactName": "Yang Wang", "ContactTitle": "Owner", "Address": "Hauptstr. 29", "City": "Bern", "Country": "Switzerland" }, { "CompanyName": "Comrcio Mineiro", "ContactName": "Pedro Afonso", "ContactTitle": "Sales Associate", "Address": "Av. dos Lusadas, 23", "City": "Sao Paulo", "Country": "Brazil" }, { "CompanyName": "Consolidated Holdings", "ContactName": "Elizabeth Brown", "ContactTitle": "Sales Representative", "Address": "Berkeley Gardens 12 Brewery", "City": "London", "Country": "UK" }, { "CompanyName": "Drachenblut Delikatessen", "ContactName": "Sven Ottlieb", "ContactTitle": "Order Administrator", "Address": "Walserweg 21", "City": "Aachen", "Country": "Germany" }, { "CompanyName": "Du monde entier", "ContactName": "Janine Labrune", "ContactTitle": "Owner", "Address": "67, rue des Cinquante Otages", "City": "Nantes", "Country": "France" }, { "CompanyName": "Eastern Connection", "ContactName": "Ann Devon", "ContactTitle": "Sales Agent", "Address": "35 King George", "City": "London", "Country": "UK" }, { "CompanyName": "Ernst Handel", "ContactName": "Roland Mendel", "ContactTitle": "Sales Manager", "Address": "Kirchgasse 6", "City": "Graz", "Country": "Austria"}]';
+                    // prepare the data
+                    var source =
+                        {
+                            datatype: "json",
+                            datafields: [
+                                { name: 'ARE_IDE_AREA', type: 'string' },
+                                { name: 'ARE_DES_NAME', type: 'string' }
+                            ],
+                            id: 'ARE_IDE_AREA',
+                            url: '/Areas/GetAreas'
+                        };
+                    var dataAdapter = new $.jqx.dataAdapter(source);
+                    $("#grid2").jqxGrid(
+                        {
+                            width: '100%',
+                            height: '100%',
+                            source: dataAdapter,
+                            columns: [
+                                { text: 'Clave del Área', dataField: 'ARE_IDE_AREA', width: 200 },
+                                { text: 'Denominación del Área', dataField: 'ARE_DES_NAME' }
+                            ]
+                        });
+                }
+                // init widgets.
+                var initWidgets = function (tab) {
+                    switch (tab) {
+                        case 0:
+                            initGrid();
+                            break;
+                        case 1:
+                            initGrid2();
+                            break;
+                    }
+                }
+                $('#tabs').jqxTabs({ width: 500, height: 560, initTabContent: initWidgets });
+            });
+        </script>
+    }*@
 
