--- a/ProjectExpenseControl/Views/Budgets/Details.cshtml
+++ b/ProjectExpenseControl/Views/Budgets/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalle del Presupuesto</h2>
 
 <div>
-    <h4>Budget</h4>
+    <h4>Presupuesto</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.BUD_IDE_BUDGET }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.BUD_IDE_BUDGET }) |
+    @Html.ActionLink("Regresar a la Lista", "Index")
 </p>
