--- a/ProjectExpenseControl/Views/Invoices/Delete.cshtml
+++ b/ProjectExpenseControl/Views/Invoices/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar Factura</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>¿Está seguro de eliminar la factura?</h3>
 <div>
-    <h4>Invoice</h4>
+    <h4>Factura</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -81,8 +81,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Eliminar" class="btn btn-default" /> |
+            @Html.ActionLink("Regresar a la Lista", "Index")
         </div>
     }
 </div>
