--- a/ProjectExpenseControl/Views/Invoices/Details.cshtml
+++ b/ProjectExpenseControl/Views/Invoices/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles de la Factura</h2>
 
 <div>
-    <h4>Invoice</h4>
+    <h4>Factura</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -77,6 +77,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.INV_ID_INVOICE }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.INV_ID_INVOICE }) |
+    @Html.ActionLink("Regresar a la Lista", "Index")
 </p>
