--- a/ProjectExpenseControl/Views/Requests/Details.cshtml
+++ b/ProjectExpenseControl/Views/Requests/Details.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles de la Solicitud</h2>
 
 <div>
     <h4>Solicitud número @Model.REQ_IDE_REQUEST</h4>
@@ -80,5 +80,5 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Regresar a la Lista", "Index")
 </p>
