--- a/ProjectExpenseControl/Views/Roles/Details.cshtml
+++ b/ProjectExpenseControl/Views/Roles/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles del Perfil</h2>
 
 <div>
-    <h4>Role</h4>
+    <h4>Perfil</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.TUSR_IDE_RESOURCE }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.TUSR_IDE_RESOURCE }) |
+    @Html.ActionLink("Regresar a la Lista", "Index")
 </p>
