--- a/ProjectExpenseControl/Views/StatusAprovs/Details.cshtml
+++ b/ProjectExpenseControl/Views/StatusAprovs/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Detalles del Estatus de Aprobación</h2>
 
 <div>
-    <h4>StatusAprov</h4>
+    <h4>Estatus de Aprobación</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -21,6 +21,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.STA_IDE_STATUS_APROV }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Editar", "Edit", new { id = Model.STA_IDE_STATUS_APROV }) |
+    @Html.ActionLink("Regresar a la Lista", "Index")
 </p>
