--- a/ProjectExpenseControl/Views/User/Delete.cshtml
+++ b/ProjectExpenseControl/Views/User/Delete.cshtml
@@ -1,83 +1,84 @@
 ﻿@model ProjectExpenseControl.DataAccess.User
 
+<h2>Eliminar Usuario</h2>
 
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>User</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.USR_IDE_AREA)
-            </dt>
+<h3>¿Está seguro de eliminar el usuario?</h3>
+<div>
+    <h4>Usuario</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.USR_IDE_AREA)
+        </dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.USR_IDE_AREA)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.USR_IDE_AREA)
+        </dd>
     
-            <dt>
-                @Html.DisplayNameFor(model => model.USR_DES_POSITION)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.USR_DES_POSITION)
+        </dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.USR_DES_POSITION)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.USR_DES_POSITION)
+        </dd>
     
-            <dt>
-                @Html.DisplayNameFor(model => model.USR_DES_NAME)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.USR_DES_NAME)
+        </dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.USR_DES_NAME)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.USR_DES_NAME)
+        </dd>
     
-            <dt>
-                @Html.DisplayNameFor(model => model.USR_DES_FIRST_NAME)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.USR_DES_FIRST_NAME)
+        </dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.USR_DES_FIRST_NAME)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.USR_DES_FIRST_NAME)
+        </dd>
     
-            <dt>
-                @Html.DisplayNameFor(model => model.USR_DES_LAST_NAME)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.USR_DES_LAST_NAME)
+        </dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.USR_DES_LAST_NAME)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.USR_DES_LAST_NAME)
+        </dd>
     
-            <dt>
-                @Html.DisplayNameFor(model => model.USR_DES_PASSWORD)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.USR_DES_PASSWORD)
+        </dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.USR_DES_PASSWORD)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.USR_DES_PASSWORD)
+        </dd>
     
-            <dt>
-                @Html.DisplayNameFor(model => model.USR_DES_PHONE)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.USR_DES_PHONE)
+        </dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.USR_DES_PHONE)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.USR_DES_PHONE)
+        </dd>
     
-            <dt>
-                @Html.DisplayNameFor(model => model.USR_DES_EMAIL)
-            </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.USR_DES_EMAIL)
+        </dt>
     
-            <dd>
-                @Html.DisplayFor(model => model.USR_DES_EMAIL)
-            </dd>
+        <dd>
+            @Html.DisplayFor(model => model.USR_DES_EMAIL)
+        </dd>
     
-        </dl>
+    </dl>
     
-        @using (Html.BeginForm()) {
-            @Html.AntiForgeryToken()
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
     
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
-            </div>
-        }
-    </div>
+        <div class="form-actions no-color">
+            <input type="submit" value="Eliminar" class="btn btn-default" /> |
+            @Html.ActionLink("Regresar a la Lista", "Index")
+        </div>
+    }
+</div>
